# cloudforge

./: .gitignore  Dockerfile  Makefile  README.md  azure-pipelines.yml  deploy.sh  docker-entrypoint.sh  go.mod  go.sum  main.go  main.py  mssql-docker-compose.yml  pyproject.toml
.dftest/: deployment.json
.github/workflows/: main.yml
cloudforge/: __init__.py  azure_deploy.py  cloudforge.py  commands.py  commands_azure.py  commands_base.py  commands_terraform.py  cparser.py  cparser2.py  generic_test.py  json_config_processor.py  json_config_processor_test.py  keyvault.py  mssql.py  mssql_test.py  parser.py  terraform.py  terraform_exec.py  terraform_install.py  terraform_test.py  tokenizer.py  utils.py  utils_test.py
cloudforge/azure/: __init__.py  action.py  arm.py  jsonr.py  synapse.py
cmd/: deploy.go  dev.go  df.go  int.go  prod.go  root.go  syn.go  terraform.go  uat.go  validate.go  version.go
deprecated/: pyproject.toml  terraform.py
deprecated/utils/: test_utils.py  utils.py
go/: go.sum
go/cmd/: dev.go  root.go  terraform.go
go/internal/: tokenizer.go
go/internal/actions/: actions.go
internal/: config.go  config_test.go  df.go  keyvault.go  root.go  terraform.go  terraform_test.go  tokenizer.go  tokenizer_test.go  utils.go  utils_test.go
internal/actions/: actions_test.go  template.go  template_test.go
modules/: README.md  requirements.txt
modules/synapse/: arm.py  compile.sh  info.py  main.py  prettify.py  sql.py
modules/synapse/src/: __init__.py  arm.py  jsonr.py  synapse.py  test_arm.py  test_synapse.py
scripts/: build.sh  build_spec.py  compile_modules.sh
scripts/synapse/: compile.sh  main.py
scripts/synapse/src/: __init__.py  arm.py  jsonr.py  synapse.py  test_arm.py  test_jsonr.py  test_synapse.py
src/: Commands.py  __init__.py  azure_deploy.py  commands.py  generic_test.py  keyvault.py  terraform.py  terraform_exec.py  terraform_install.py  terraform_test.py  tokenizer.py  tokenizer_test.py  utils.py  utils_test.py
utils/: config.go  config_test.go  keyvault.go  root.go  terraform.go  terraform_test.go  tokenizer.go  tokenizer_test.go  utils.go  utils_test.go
version/: version.go
