[tool.poetry]
name = "ec"
version = "0.8.0"
description = ""
authors = ["duysqubix <duys@qubixat.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
azure-keyvault-secrets = "^4.6.0"
azure-identity = "^1.12.0"
azure-keyvault = "^4.2.0"
requests = "^2.28.2"
semantic-version = "^2.10.0"

[tool.poetry.dev-dependencies]
mypy = "^1.0.0"
yapf = "^0.32.0"
ipython = "^8.10.0"
myst-parser = "^0.18.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
