[tool.poetry]
name = "cloudforge"
version = "0.8.2-dev"
description = ""
authors = ["duysqubix <duys@qubixadscom>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
azure-keyvault-secrets = "^4.6.0"
azure-identity = "^1.12.0"
azure-keyvault = "^4.2.0"
requests = "^2.28.2"
semantic-version = "^2.10.0"
azure-mgmt-resource = "^22.0.0"
pyhaikunator = "^0.0.4"
pygments = "^2.14.0"
pyjson5 = "^1.6.2"
faker = "^17.6.0"
pyodbc = "^4.0.39"
jmespath = "^1.0.1"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.dev-dependencies]
mypy = "^1.0.0"
ipython = "^8.10.0"
myst-parser = "^0.18.1"
pytest = "^7.2.1"
black = "^23.1.0"

[tool.poetry.group.dev.dependencies]
nuitka = "^1.4.8"
ordered-set = "^4.1.0"
zstandard = "^0.20.0"
click = "^8.1.3"
black = "^23.1.0"
ipython = "^8.11.0"
jmespath = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
cf = "cloudforge.cloudforge:execute"

[tool.poetry_bumpversion.file."cloudforge/__init__.py"]
# Duplicate the line above to add more files
