[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["dhuys <dhuys@vorys.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mypy = "^0.920"
yapf = "^0.31.0"
azure-identity = "^1.7.1"
azure-keyvault-secrets = "^4.3.0"
toml = "^0.10.2"
azure-keyvault = "^4.1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.31.1"
pytest = "^6.2.5"
coloredlogs = "^15.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
